Latest release instructions for 5.2 branch